[package]
name = "mergetopus"
version = "0.4.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[build-dependencies]
serde_json = "1"
